# cmake_tutorial

./: CMake_Introduction.md  README.md  clear.py  clear.sh
demo1/: CMakeLists.txt  main.c
demo2/: CMakeLists.txt  hello.c  main.c
demo3/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/libhello/: CMakeLists.txt  hello.h
demo4/src/: main.c
demo5/: CMakeLists.txt
demo5/src/: main.c
